--- a/.github/workflows/rpmbuild.yml
+++ b/.github/workflows/rpmbuild.yml
@@ -166,7 +166,7 @@ jobs:
       - name: Setup yq
         run: |
           if [ ! -f yq ]; then
-            curl -o yq https://github.com/mikefarah/yq/releases/download/v4.47.1/yq_linux_amd64
+            curl -Lo yq https://github.com/mikefarah/yq/releases/download/v4.47.1/yq_linux_amd64
           fi
           echo '0fb28c6680193c41b364193d0c0fc4a03177aecde51cfc04d506b1517158c2fb  yq' | sha256sum -c
           install -m 755 yq /usr/bin/yq
