--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -72,7 +72,7 @@ jobs:
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
 
-          git checkout -b ${{ inputs.update-branch-name }}
+          git checkout --track origin/${{ inputs.update-branch-name }}
           git merge ${{ github.event.repository.default_branch }}
 
 
