--- a/.github/workflows/update-metadata.yml
+++ b/.github/workflows/update-metadata.yml
@@ -15,8 +15,6 @@ on:
       GPG_SECRET:
         description: ""
         required: true
-      GPG_SECRET_ID:
-        required: true
       TOKEN:
         required: false
 
@@ -64,17 +62,22 @@ jobs:
           shred -u ~/.config/rclone/rclone.conf
 
       - name: Import GPG key
+        id: import-key
         env:
-          GPG_SEC: ${{ secrets.GPG_SECRET }}
+          GPG_SECRET: ${{ secrets.GPG_SECRET }}
         run: |
-          echo "$GPG_SEC" | base64 -d | gpg --import --batch --yes
+          echo ">>> Importing GPG key"
+          echo "$GPG_SECRET" | base64 -d | gpg --import --batch --yes
+          FINGERPRINT=$(gpg --list-keys --with-colons | awk -F: '/^fpr:/ {print $10; exit}')
+          echo ">>> Fingerprint: $FINGERPRINT"
+          echo "id=$FINGERPRINT" >> $GITHUB_OUTPUT
 
       - name: Generate yum repodata, also sign repomd.xml
         env:
-          GPG_SEC_ID: ${{ secrets.GPG_SECRET_ID }}
+          GPG_SECRET_ID: ${{ steps.import-key.outputs.id }}
         run: |
-          tools/scripts/gen-repodata -r copy -s "$GPG_SEC_ID"
-          gpg --batch --yes --delete-secret-keys "$GPG_SEC_ID"
+          tools/scripts/gen-repodata -r copy -s "$GPG_SECRET_ID"
+          gpg --batch --yes --delete-secret-keys "$GPG_SECRET_ID"
 
       - name: Generate status.json
         run: |
@@ -93,7 +96,7 @@ jobs:
       - name: Clean environment
         if: always()
         env:
-          GPG_SEC_ID: ${{ secrets.GPG_SECRET_ID }}
+          GPG_SECRET_ID: ${{ steps.import-key.outputs.id }}
         run: |
           test -e ~/.config/rclone/rclone.conf && shred -u ~/.config/rclone/rclone.conf
-          gpg --batch --yes --delete-secret-keys "$GPG_SEC_ID" || true
+          gpg --batch --yes --delete-secret-keys "$GPG_SECRET_ID" || true
