block busybox on suse

--- a/.github/workflows/rpmbuild.yml
+++ b/.github/workflows/rpmbuild.yml
@@ -187,6 +187,8 @@ jobs:
             dnf install -y findutils util-linux tar git
           else
             zypper --non-interactive ref
+            # busybox often introduces dependency conflicts
+            zypper --non-interactive addlock busybox busybox-less
             # for whatever reason, dnf not work when using libcurl-mini4 instead of libcurl4
             zypper --non-interactive install findutils libcurl4 util-linux tar git
           fi
